--- a/src/core/i18n/zh_CN.json
+++ b/src/core/i18n/zh_CN.json
@@ -10,6 +10,7 @@
     "msg_warning_uts_env": "[提示]：缺失UTS运行环境。请选择UTS项目，然后运行到手机设备，此时会自动安装UTS相关插件。如果没有自动安装，请删除项目unpackage/cache目录。",
     "msg_warning_uniappx_env": "[提示]：缺失uniapp-x测试环境。请选择要测试的项目，然后运行到手机设备，此时会自动安装相关插件",
 
+    "msg_warning_test_report_path_tips": "uni-app 自动化测试报告会输出到默认目录，如需更改，请在HBuilderX中点击菜单【设置 - 插件设置】，配置测试报告输出目录。",
     "msg_warning_test_report_path_check": "[提示]：Windows电脑，必须手动设置测试报告输出目录，且路径不能含有空格。请点击菜单【设置 - 插件设置】，配置测试报告输出目录。",
     "invalid_custom_test_report_path": "您在插件设置中，自定义的测试报告输出目录无效，请重新设置。",
 
